--- a/README.adoc
+++ b/README.adoc
@@ -16,7 +16,7 @@ ifdef::env-github[]
 endif::[]
 
 == Status
-image:https://github.com/isaqb-org/curriculum-adoc/workflows/CI%20-%20Releases%20and%20Main/badge.svg?branch=main["CI – Releases and Main"]
+image:https://github.com/isaqb-org/curriculum-adoc/actions/workflows/pages/pages-build-deployment/badge.svg["CI – Build-and-Deploy"]
 image:https://img.shields.io/github/last-commit/isaqb-org/curriculum-adoc/main.svg["Last commit"]
 image:https://img.shields.io/github/contributors/isaqb-org/curriculum-adoc.svg["Contributors",link="https://github.com/isaqb-org/curriculum-adoc/graphs/contributors"]
 image:https://img.shields.io/github/issues/isaqb-org/curriculum-adoc.svg["Issues",link="https://github.com/isaqb-org/curriculum-adoc/issues"]
@@ -25,17 +25,19 @@ image:https://img.shields.io/github/issues-closed/isaqb-org/curriculum-adoc.svg[
 
 This is <<copyrighted,copyrighted work>>.
 
-=== Version history before GitHub releases
+=== Version history
 
 [cols="1,1,5"]
 |===
 | Version | Date | Comments
 
-| 1.5-DE  | 2018 | latest German version
+| 2025.1  | 2025 | Updated references, included docs-as-code, included LLMs/AI (see changelog.md for details). Consistent wording for learning goals.
+| 2021.1  | 2021 | Major content overhaul, migrating to AsciiDoc, first English version. Several updated learning goals. 
+| 1.6-DE  | 2018 | Minor fixes, not sync'ed with EN version
 | 1.5-EN  | 2018 | Preliminary translation
-| 1.6-DE  | 2018 | minor fixes, have not been taken over to EN version
-| 2025.1  | 2025 | updated references, included docs-as-code, included LLMs/AI (see changelog.md for details)|
+| 1.5-DE  | 2018 | Minor update of German version
 |===
+
 
 
 == Content
